--- a/opencl/clprof_callbacks.cpp.erb
+++ b/opencl/clprof_callbacks.cpp.erb
@@ -1,6 +1,7 @@
 #include "babeltrace2/babeltrace.h"
 #include "babeltrace_cl.h"
 #include "clprof.h"
+#include "utils.h"
 #include <iomanip>
 #include <vector>
 #include <algorithm>
@@ -16,56 +17,6 @@
 #include <cassert>
 <% end %>
 
-// https://stackoverflow.com/questions/7110301/generic-hash-for-tuples-in-unordered-map-unordered-set
-// Hash of std tuple
-namespace std{
-    namespace
-    {
-        // Code from boost
-        // Reciprocal of the golden ratio helps spread entropy
-        //     and handles duplicates.
-        // See Mike Seymour in magic-numbers-in-boosthash-combine:
-        //     https://stackoverflow.com/questions/4948780
-        template <class T>
-        inline void hash_combine(std::size_t& seed, T const& v)
-        {
-            seed ^= hash<T>()(v) + 0x9e3779b9 + (seed<<6) + (seed>>2);
-        }
-
-        // Recursive template code derived from Matthieu M.
-        template <class Tuple, size_t Index = std::tuple_size<Tuple>::value - 1>
-        struct HashValueImpl
-        {
-          static void apply(size_t& seed, Tuple const& tuple)
-          {
-            HashValueImpl<Tuple, Index-1>::apply(seed, tuple);
-            hash_combine(seed, get<Index>(tuple));
-          }
-        };
-
-        template <class Tuple>
-        struct HashValueImpl<Tuple,0>
-        {
-          static void apply(size_t& seed, Tuple const& tuple)
-          {
-            hash_combine(seed, get<0>(tuple));
-          }
-        };
-    }
-
-    template <typename ... TT>
-    struct hash<std::tuple<TT...>>
-    {
-        size_t
-        operator()(std::tuple<TT...> const& tt) const
-        {
-            size_t seed = 0;
-            HashValueImpl<std::tuple<TT...> >::apply(seed, tt);
-            return seed;
-        }
-
-    };
-}
 /*
 Global variable
 */
@@ -76,12 +27,12 @@ const bt_value *display_mode;
 <% end %>
 
 typedef std::string hostname_t;
-typedef std::string cl_command_name;
+typedef std::string thapi_command_name;
 typedef int64_t     process_id_t;
 typedef uint64_t    thread_id_t;
 
 typedef std::tuple<hostname_t, process_id_t> hp_t;
-typedef std::tuple<thread_id_t, cl_command_name> t_command_name_t;
+typedef std::tuple<thread_id_t, thapi_command_name> t_command_name_t;
 typedef std::tuple<hostname_t, process_id_t, thread_id_t> hpt_t;
 typedef std::tuple<hostname_t, process_id_t, cl_command_queue> hp_command_queue_t;
 typedef std::tuple<hostname_t, process_id_t, cl_device_id> hp_device_t;
@@ -89,126 +40,11 @@ typedef std::tuple<hostname_t, process_id_t, thread_id_t, cl_device_id> hpt_devi
 typedef std::tuple<hostname_t, process_id_t, cl_event> hp_event_t;
 typedef std::tuple<hostname_t, process_id_t, cl_kernel> hp_kernel_t;
 
-typedef std::tuple<hostname_t, process_id_t, thread_id_t, cl_command_name> hpt_command_name_t;
-typedef std::tuple<hostname_t, process_id_t, thread_id_t, cl_device_id, cl_command_name> hpt_device_command_name_t;
-
-template <typename T>
-std::string to_string_with_precision(const T a_value, const std::string extension, const int n = 2)
-{
-    std::ostringstream out;
-    out.precision(n);
-    out << std::fixed << a_value << extension;
-    return out.str();
-}
-
-template <typename T>
-std::string format_time(const T duration) {
-<% [['h',  '3.6e+12'],
-    ['min', '6e+10'],
-    ['s', '1e+9'],
-    ['ms', '1e+6'],
-    ['us', '1e+3'],
-    ['ns', '1']].each do | unit, factor |  %>
-    const double <%= unit %> = duration / <%= factor %>;
-    if (<%= unit %> >= 1.) {
-        return  to_string_with_precision(<%= unit %>, "<%= unit %>");
-    }
-<% end %>
-    return "";
-}
-
-template <typename T>
-std::string format_byte(const T duration) {
-<%[  ['TB',  '1e+12'],
-     ['GB', '1e+9'],
-     ['MB',   '1e+6'],
-     ['kB',   '1e+3'],
-     ['B', '1']].each do | unit, factor |  %>
-    const double <%= unit %> = duration / <%= factor %>;
-    if (<%= unit %> >= 1.) {
-        return  to_string_with_precision(<%= unit %>, "<%= unit %>");
-    }
-<% end %>
-    return "";
-}
-
-/*
-Class for time
- */
-
-struct StatIprof_string {
-    std::string time;
-    std::string time_ratio;
-    std::string count;
-    std::string avg;
-    std::string min;
-    std::string max;
-};
-
-class StatIprof {
-    uint64_t _start;
-
-  public:
-    uint64_t _total_time{1};
-    void start(const int64_t);
-    void stop(const int64_t);
-    void delta(const uint64_t);
-    void merge(StatIprof);
-    StatIprof_string to_string(const uint64_t);
-
-    //Used in merge
-    uint64_t _count{0};
-    uint64_t _min{ULONG_MAX};
-    uint64_t _max{0};
-    uint64_t _time{0};
-
-};
-
-void StatIprof::start(const int64_t start) {
-   _start  = start;
-}
-
-void StatIprof::stop(const int64_t stop) {
-   const uint64_t  delta = stop - _start;
-   _min = std::min(_min,delta);
-   _max = std::max(_max,delta);
-   _count++;
-   _time += delta;
-}
-
-void StatIprof::delta(const uint64_t delta) {
-   _min = std::min(_min,delta);
-   _max = std::max(_max,delta);
-   _count++;
-   _time += delta;
-}
-
-void StatIprof::merge(StatIprof st) {
-   _min = std::min(_min,st._min);
-   _max = std::max(_max,st._max);
-   // total can overfloat Need to handle that correctly at some point...
-   _count += st._count;
-   _time += st._time;
-}
-
-<% { "StatTime" => "format_time",
-     "StatByte" => "format_byte" }.each do |n,t| %>
-class <%= n %>: public StatIprof {
-   public:
-     StatIprof_string to_string(const uint64_t total_time){
-                                  const double avg = _count ? _time / _count : 0.;
-                                  return StatIprof_string{<%= t %>(_time), // Time
-                                                          to_string_with_precision( (100.*_time / total_time), "%"), // Percent
-                                                          to_string_with_precision(_count,"",0), // Count
-                                                          <%= t %>(avg),
-                                                          <%= t %>(_min),
-                                                          <%= t %>(_max)};
-    }
-};
-<% end %>
+typedef std::tuple<hostname_t, process_id_t, thread_id_t, thapi_command_name> hpt_command_name_t;
+typedef std::tuple<hostname_t, process_id_t, thread_id_t, cl_device_id, thapi_command_name> hpt_device_command_name_t;
 
 std::unordered_map<hp_t, cl_device_id> last_device;
-std::unordered_map<hpt_t, cl_command_name> last_command;
+std::unordered_map<hpt_t, thapi_command_name> last_command;
 
 std::unordered_map<hp_command_queue_t, cl_device_id> command_queue_to_device;
 std::unordered_map<hpt_command_name_t, cl_device_id> command_name_to_device;
@@ -220,28 +56,6 @@ std::unordered_map<hpt_command_name_t, StatByte> memory_trafic;
 std::unordered_map<hp_event_t, uint64_t> event_result_to_delta;
 std::unordered_map<hp_device_t, std::string> device_to_name;
 std::unordered_map<hp_kernel_t, std::string> kernel_to_name;
-
-/*
-Utils function
-*/
-static const hostname_t borrow_hostname(const bt_event *event){
-    const bt_stream *stream = bt_event_borrow_stream_const(event);
-    const bt_trace *trace = bt_stream_borrow_trace_const(stream);
-    const bt_value *host_name_str = bt_trace_borrow_environment_entry_value_by_name_const(trace, "hostname");
-    return  bt_value_string_get(host_name_str);
-}
-
-static process_id_t borrow_process_id(const bt_event *event){
-    const bt_field *common_context_field = bt_event_borrow_common_context_field_const(event);
-    const bt_field *field = bt_field_structure_borrow_member_field_by_index_const(common_context_field, 0);
-    return bt_field_integer_signed_get_value(field);
-}
-
-static thread_id_t borrow_thread_id(const bt_event *event){
-    const bt_field *common_context_field = bt_event_borrow_common_context_field_const(event);
-    const bt_field *field = bt_field_structure_borrow_member_field_by_index_const(common_context_field, 1);
-    return bt_field_integer_unsigned_get_value(field);
-}
 
 
 /* Callback */
@@ -279,7 +93,7 @@ static void clprof_<%= dbt_event.name %>_callback(
     const cl_device_id device = command_queue_to_device[hp_command_queue_t(hostname,process_id,command_queue)];
 
     <% if dbt_event.fields['kernel'] %>
-    const cl_command_name name  = kernel_to_name[hp_kernel_t(hostname,process_id,kernel)];
+    const thapi_command_name name  = kernel_to_name[hp_kernel_t(hostname,process_id,kernel)];
     <% else %>
     constexpr char name[] =  "<%= dbt_event.name_striped %>";
     <% end %>
@@ -292,7 +106,7 @@ static void clprof_<%= dbt_event.name %>_callback(
     const process_id_t process_id = borrow_process_id(bt_evt);
     const thread_id_t thread_id   = borrow_thread_id(bt_evt);
     const hp_event_t hp_event{hostname,process_id, event};
-    const cl_command_name command_name = last_command[hpt_t(hostname,process_id,thread_id)];
+    const thapi_command_name command_name = last_command[hpt_t(hostname,process_id,thread_id)];
 
     if (!event_to_command_name.count(hp_event)){
         event_to_command_name[hp_event] = t_command_name_t(thread_id, command_name);
@@ -318,7 +132,7 @@ static void clprof_<%= dbt_event.name %>_callback(
         event_to_command_name.erase(hp_event);
     } else {
         const thread_id_t thread_id   = borrow_thread_id(bt_evt);
-        const cl_command_name command_name = last_command[hpt_t(hostname,process_id,thread_id)];
+        const thapi_command_name command_name = last_command[hpt_t(hostname,process_id,thread_id)];
         event_result_to_delta[hp_event]= delta;
 
         event_to_command_name[hp_event] = t_command_name_t(thread_id, command_name);
@@ -361,11 +175,11 @@ void init_callbacks(struct opencl_dispatch   *opencl_dispatch) {
                 } %>
 <% d_headers.each do | m, l_headers | %>
    <% main_type, main_function = m %>
-void print_array(std::unordered_map<cl_command_name, <%= main_type %> > aggregated, std::string header) {
+void print_array(std::unordered_map<thapi_command_name, <%= main_type %> > aggregated, std::string header) {
 
     uint64_t total_time{0};
     uint64_t total_count{0};
-    for (std::pair<cl_command_name,  <%= main_type %> > element: aggregated) {
+    for (std::pair<thapi_command_name,  <%= main_type %> > element: aggregated) {
         total_time += element.second._time;
         total_count += element.second._count;
    }
@@ -393,7 +207,7 @@ void print_array(std::unordered_map<cl_command_name, <%= main_type %> > aggregat
    len_max_count = std::max(len_max_count, to_string_with_precision(total_count,"",0).size() );
 
 <%# Need to be bigger than the body %>
-   for (std::pair<cl_command_name,  <%= main_type %> > element: aggregated) {
+   for (std::pair<thapi_command_name,  <%= main_type %> > element: aggregated) {
        len_max_command_name =  std::max(len_max_command_name,  element.first.size());
        const auto [time, time_ratio, count, avg, min, max ] = element.second.to_string(total_time);
 <% l_headers.drop(1).each do |v, _| %>
@@ -402,7 +216,7 @@ void print_array(std::unordered_map<cl_command_name, <%= main_type %> > aggregat
    }
 
 <%# Sort the table %>
-   std::vector<std::pair<cl_command_name,  <%= main_type %> >> array_sorted(aggregated.begin(), aggregated.end());
+   std::vector<std::pair<thapi_command_name,  <%= main_type %> >> array_sorted(aggregated.begin(), aggregated.end());
    std::sort(array_sorted.begin(), array_sorted.end(), [](auto a, auto b) { return a.second._time > b.second._time;} );
 
 <%#
@@ -420,8 +234,8 @@ void print_array(std::unordered_map<cl_command_name, <%= main_type %> > aggregat
    << std::endl;
 
 <%# Print Body %>
-   for (std::pair<cl_command_name,  <%= main_type %> > element: array_sorted) {
-        const cl_command_name command_name = element.first;
+   for (std::pair<thapi_command_name,  <%= main_type %> > element: array_sorted) {
+        const thapi_command_name command_name = element.first;
         const auto [time, time_ratio, count, avg, min, max ] = element.second.to_string(total_time);
         std::cout
         <% l_headers.each do |v, _| %>
@@ -491,7 +305,7 @@ void finalize_callbacks() {
          std::set<<%= t %>> s_<%=n%>;
     <% end %>
     <%# Agreagate API Call Result and compute total time spend %>
-         std::unordered_map<cl_command_name, <%= main_type %> > aggregated;
+         std::unordered_map<thapi_command_name, <%= main_type %> > aggregated;
          for (auto element: <%= result %>)
          {
             auto [ <%= var.map{ |t,n| n}.join(',') %>,command_name ] = element.first;
@@ -515,13 +329,13 @@ void finalize_callbacks() {
   <% output.each do |main_type, result,header, type, var| %>
       {
     <% args = var.map{ |t,_,n| n}.join(',') %>
-         std::unordered_map< <%= type %>, std::unordered_map<cl_command_name, <%= main_type %> >> d1;
+         std::unordered_map< <%= type %>, std::unordered_map<thapi_command_name, <%= main_type %> >> d1;
          for (auto [s, time]: <%= result %> ) {
             auto [<%= args %>, command_name] = s;
             d1[ <%= type %>( <%= args %> )][command_name].merge(time);
          }
 
-         std::vector<std::pair< <%= type %> , std::unordered_map<cl_command_name,  <%= main_type %> >>> array_sorted(d1.begin(), d1.end());
+         std::vector<std::pair< <%= type %> , std::unordered_map<thapi_command_name,  <%= main_type %> >>> array_sorted(d1.begin(), d1.end());
          std::sort(array_sorted.begin(), array_sorted.end(),   [](auto a, auto b) { return a.first > b.first ; } );
 
          for (auto[s, aggregated]: array_sorted) {
