--- a/ze/zeprof_callbacks.cpp.erb
+++ b/ze/zeprof_callbacks.cpp.erb
@@ -7,7 +7,7 @@
 #include "babeltrace2/babeltrace.h"
 #include "babeltrace_ze.h"
 #include "zeprof.h"
-#include "utils.h"
+#include "xprof_utils.h"
 #include <iomanip>
 #include <vector>
 #include <algorithm>
@@ -22,16 +22,6 @@
 Global variable
 */
 const bt_value *display_mode;
-
-typedef std::string hostname_t;
-typedef std::string thapi_command_name;
-typedef int64_t     process_id_t;
-typedef uint64_t    thread_id_t;
-
-typedef std::tuple<hostname_t, process_id_t> hp_t;
-typedef std::tuple<hostname_t, process_id_t, thread_id_t> hpt_t;
-
-typedef std::tuple<hostname_t, process_id_t, thread_id_t, thapi_command_name> hpt_command_name_t;
 
 std::unordered_map<hpt_t, thapi_command_name> last_command;
 std::unordered_map<hpt_command_name_t, StatTime> api_call;
@@ -64,101 +54,14 @@ void init_callbacks(struct ze_dispatch   *ze_dispatch) {
 <% end %>
 }
 
-<% d_headers = { ["StatTime","format_time"] =>  [['command_name','Name'],
-                                ['time', 'Time'],
-                                ['time_ratio', 'Time(%)'],
-                                ['count', 'Calls'],
-                                ['avg', 'Average'],
-                                ['min', 'Min'],
-                                ['max', 'Max'] ],
-                ["StatByte", "format_byte"] => [['command_name','Name'],
-                                ['time', 'Byte'],
-                                ['time_ratio', 'Byte(%)'],
-                                ['count', 'Calls'],
-                                ['avg', 'Average'],
-                                ['min', 'Min'],
-                                ['max', 'Max'] ]
-                } %>
-<% d_headers.each do | m, l_headers | %>
-   <% main_type, main_function = m %>
-void print_array(std::unordered_map<thapi_command_name, <%= main_type %> > aggregated, std::string header) {
 
-    uint64_t total_time{0};
-    uint64_t total_count{0};
-    for (std::pair<thapi_command_name,  <%= main_type %> > element: aggregated) {
-        total_time += element.second._time;
-        total_count += element.second._count;
-   }
-   if (!total_count) {
-        std::cout << "No "<< header << " information avalaible" << std::endl;
-        return;
-   }
-   std::cout << header << std::endl;
 
 <%#
-  _
- /   _  ._ _  ._     _|_  _    |\/|  _.      |  _  ._   _ _|_ |_
- \_ (_) | | | |_) |_| |_ (/_   |  | (_| ><   | (/_ | | (_| |_ | |
-              |                                         _|
+   _                                 
+  |_) ._ o ._ _|_    /\  ._ ._ _.    
+  |   |  | | | |_   /--\ |  | (_| \/ 
+                                  /  
 %>
-
-<%# Need to be bigger than the header %>
-<% l_headers.each do |v, n| %>
-   uint64_t len_max_<%= v %> = <%= n.size() %>;
-<% end %>
-
-<%# Need to be bigger than the footer %>
-   len_max_command_name = std::max(len_max_command_name,  uint64_t{<%= "Total".size() %>} );
-   len_max_time = std::max(len_max_time, <%= main_function %>(total_time).size());
-   len_max_count = std::max(len_max_count, to_string_with_precision(total_count,"",0).size() );
-
-<%# Need to be bigger than the body %>
-   for (std::pair<thapi_command_name,  <%= main_type %> > element: aggregated) {
-       len_max_command_name =  std::max(len_max_command_name,  element.first.size());
-       const auto [time, time_ratio, count, avg, min, max ] = element.second.to_string(total_time);
-<% l_headers.drop(1).each do |v, _| %>
-       len_max_<%= v %> = std::max(len_max_<%= v %>, <%= v %>.size());
-<% end %>
-   }
-
-<%# Sort the table %>
-   std::vector<std::pair<thapi_command_name,  <%= main_type %> >> array_sorted(aggregated.begin(), aggregated.end());
-   std::sort(array_sorted.begin(), array_sorted.end(), [](auto a, auto b) { return a.second._time > b.second._time;} );
-
-<%#
-  _
- |_) ._ o ._ _|_
- |   |  | | | |_
-
-%>
-
-<%# Print Header %>
-   std::cout
-<% l_headers.each do |v, n| %>
-   << std::setw(len_max_<%= v %>) << std::right << "<%= n %>" << " | "
-<% end %>
-   << std::endl;
-
-<%# Print Body %>
-   for (std::pair<thapi_command_name,  <%= main_type %> > element: array_sorted) {
-        const thapi_command_name command_name = element.first;
-        const auto [time, time_ratio, count, avg, min, max ] = element.second.to_string(total_time);
-        std::cout
-        <% l_headers.each do |v, _| %>
-        << std::setw(len_max_<%= v %>) << std::right << <%= v %> << " | "
-        <% end %>
-        << std::endl;
-    }
-
-<%# Print footer %>
-   std::cout << std::setw(len_max_command_name) << std::right << "Total" << " | "
-             << std::setw(len_max_time) << std::right << <%= main_function %>(total_time) << " | "
-             << std::setw(len_max_time_ratio) << std::right << "100.00%" << " | "
-             << std::setw(len_max_count) << std::right <<  to_string_with_precision(total_count,"",0) << " | "
-             << std::endl;
-}
-
-<% end %>
 
 void finalize_callbacks() {
 
