--- a/ze/zeprof_callbacks.cpp.erb
+++ b/ze/zeprof_callbacks.cpp.erb
@@ -22,9 +22,7 @@
 Global variable
 */
 const bt_value *display_mode;
-
 std::unordered_map<hpt_t, thapi_command_name> last_command;
-std::unordered_map<hpt_command_name_t, StatTime> api_call;
 
 /* Callback */
 
@@ -47,6 +45,12 @@ static void zeprof_<%= dbt_event.lltng_name %>_callback(
 };
 <% end %>
 
+<%#
+ ___
+  |  ._  o _|_ o  _. | o _   _
+ _|_ | | |  |_ | (_| | | /_ (/_
+
+%>
 
 void init_callbacks(struct ze_dispatch   *ze_dispatch) {
 <% $dbt_events.each do | dbt_event| %>
@@ -54,79 +58,22 @@ void init_callbacks(struct ze_dispatch   *ze_dispatch) {
 <% end %>
 }
 
-
-
 <%#
-   _                                 
-  |_) ._ o ._ _|_    /\  ._ ._ _.    
-  |   |  | | | |_   /--\ |  | (_| \/ 
-                                  /  
+  _
+ |_ o ._   _. | o _   _
+ |  | | | (_| | | /_ (/_
+
 %>
 
 void finalize_callbacks() {
-
-   <% output = [ ['StatTime', 'api_call', 'API calls', 'hpt_t',
-                    [ ['hostname_t','Hostnames','Hostname'],
-                      ['process_id_t','Processes','Process'],
-                      ['thread_id_t','Threads','Thread'] ] ] ] %>
-
    std::string display {bt_value_string_get(display_mode)};
    if (display == "compact" ) {
-  <% output.each do |main_type, result,header, _, var| %>
-      {
-    <% var.each do |t,n | %>
-         std::set<<%= t %>> s_<%=n%>;
-    <% end %>
-    <%# Agreagate API Call Result and compute total time spend %>
-         std::unordered_map<thapi_command_name, <%= main_type %> > aggregated;
-         for (auto element: <%= result %>)
-         {
-            auto [ <%= var.map{ |t,n| n}.join(',') %>,command_name ] = element.first;
-    <% var.each do | _, n | %>
-            s_<%= n %>.insert(<%= n %>);
-    <% end %>
-            const <%= main_type %> time = element.second;
-            aggregated[command_name].merge(time);
-         }
-         std::ostringstream oss;
-         oss << "<%= header %>"
-    <% var.each do | _, n | %>
-             << " | " << s_<%= n %>.size() << " <%= n %>"
-    <% end %>
-             << std::endl;
-         print_array(aggregated,oss.str());
-         std::cout << std::endl;
-      }
+  <% ['api_call','device_id_result','memory_trafic'].each do |a| %>
+    print_compact_<%= a %>();
   <% end %>
    } else if (display == "extended" ) {
-  <% output.each do |main_type, result,header, type, var| %>
-      {
-    <% args = var.map{ |t,_,n| n}.join(',') %>
-         std::unordered_map< <%= type %>, std::unordered_map<thapi_command_name, <%= main_type %> >> d1;
-         for (auto [s, time]: <%= result %> ) {
-            auto [<%= args %>, command_name] = s;
-            d1[ <%= type %>( <%= args %> )][command_name].merge(time);
-         }
-
-         std::vector<std::pair< <%= type %> , std::unordered_map<thapi_command_name,  <%= main_type %> >>> array_sorted(d1.begin(), d1.end());
-         std::sort(array_sorted.begin(), array_sorted.end(),   [](auto a, auto b) { return a.first > b.first ; } );
-
-         for (auto[s, aggregated]: array_sorted) {
-            auto [ <%= args %> ] = s;
-            std::ostringstream oss;
-            oss <<  "<%= header %>"
-    <% var.each do | _,_, n | %>
-                << " | <%= n %>: " << <%= n %>
-    <% end %>
-    <% if result == 'device_id_result' %>
-                <<  " (" << device_to_name[hp_device_t(Hostname,Process,Device)] << ")"
-    <% end %>
-                << std::endl;
-            print_array(aggregated, oss.str());
-            std::cout << std::endl;
-         }
-     }
-   <%end%>
-  }
+  <% ['api_call','device_id_result','memory_trafic'].each do |a| %>
+     print_extented_<%= a %>();
+  <% end %>
+   }
 }
-
